--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -4,13 +4,17 @@ $medium-breakpoint: 42em !default;
 
 // Headers
 $header-heading-color: #fff !default;
-$header-bg-color: #159957 !default;
-$header-bg-color-secondary: #155799 !default;
+//$header-bg-color: #159957 !default;
+$header-bg-color: #4A4E69 !default;
+//$header-bg-color-secondary: #155799 !default;
+$header-bg-color-secondary: #22223B !default;
 
 // Text
-$section-headings-color: #159957 !default;
+//$section-headings-color: #159957 !default;
+$section-headings-color: #4A4E69 !default;
 $body-text-color: #606c71 !default;
-$body-link-color: #1e6bb8 !default;
+//$body-link-color: #1e6bb8 !default;
+$body-link-color: #22223B !default;
 $blockquote-text-color: #819198 !default;
 
 // Code
