added info about the palette

--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,3 +1,6 @@
+// palette used in edits:
+// https://coolors.co/22223b-4a4e69-9a8c98-c9ada7-f2e9e4
+
 // Breakpoints
 $large-breakpoint: 64em !default;
 $medium-breakpoint: 42em !default;
