--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -19,6 +19,8 @@ $body-text-color: #606c71 !default;
 //$body-link-color: #1e6bb8 !default;
 $body-link-color: #22223B !default;
 $blockquote-text-color: #819198 !default;
+//my own added
+$body-bg-color: #F2E9E4 !default;
 
 // Code
 $code-bg-color: #f3f6fa !default;
