--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -21,7 +21,7 @@ $body-link-color: #22223B !default;
 $blockquote-text-color: #819198 !default;
 //my own added
 //$body-bg-color: #F2E9E4 !default;
-$body-bg-color: rgb(117, 47, 9) !default;
+$background-color: rgb(117, 47, 9) !default;
 
 // Code
 $code-bg-color: #f3f6fa !default;
