--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -1,5 +1,6 @@
 // palette used in edits:
 // https://coolors.co/22223b-4a4e69-9a8c98-c9ada7-f2e9e4
+// https://www.canva.com/colors/color-palettes/summer-splash/
 
 // Breakpoints
 $large-breakpoint: 64em !default;
@@ -8,20 +9,18 @@ $medium-breakpoint: 42em !default;
 // Headers
 $header-heading-color: #fff !default;
 //$header-bg-color: #159957 !default;
-$header-bg-color: #4A4E69 !default;
+$header-bg-color: #D4F1F4 !default;
 //$header-bg-color-secondary: #155799 !default;
-$header-bg-color-secondary: #22223B !default;
+$header-bg-color-secondary: #05445E !default;
 
 // Text
 //$section-headings-color: #159957 !default;
-$section-headings-color: #4A4E69 !default;
+$section-headings-color: #189AB4 !default;
 $body-text-color: #606c71 !default;
 //$body-link-color: #1e6bb8 !default;
-$body-link-color: #22223B !default;
+$body-link-color: #189AB4 !default;
 $blockquote-text-color: #819198 !default;
-//my own added
-//$body-bg-color: #F2E9E4 !default;
-$background-color: rgb(117, 47, 9) !default;
+
 
 // Code
 $code-bg-color: #f3f6fa !default;
