--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -9,7 +9,7 @@ $medium-breakpoint: 42em !default;
 // Headers
 $header-heading-color: #fff !default;
 //$header-bg-color: #159957 !default;
-$header-bg-color: #D4F1F4 !default;
+$header-bg-color: #189AB4 !default;
 //$header-bg-color-secondary: #155799 !default;
 $header-bg-color-secondary: #05445E !default;
 
@@ -18,7 +18,7 @@ $header-bg-color-secondary: #05445E !default;
 $section-headings-color: #189AB4 !default;
 $body-text-color: #606c71 !default;
 //$body-link-color: #1e6bb8 !default;
-$body-link-color: #189AB4 !default;
+$body-link-color: #05445E !default;
 $blockquote-text-color: #819198 !default;
 
 
