--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,12 +6,12 @@ layout: default
 
   {{ content }}
 
-  <h2>Latest Posts</h2>
+  <h2>latest posts</h2>
 
   <div>&nbsp;</div>
 
   <ul class="post-list">
-    {% for post in site.posts %}
+    {% for post in site.posts limit:3 %}
       <li>
 
         {% assign date_format = site.cayman-blog.date_format | default: "%b %-d, %Y" %}
