--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -63,6 +63,9 @@
         {% if page.layout == 'post' %}
         {% assign page-tagline = page.tagline | escape  %}
         {% endif %}
+        {% if page.layout == 'all_posts' %}
+        {% assign page-tagline = page.tagline | escape  %}
+        {% endif %}
         
         <section class="page-header">
             <h1 class="project-name">{{ page-title }}</h1>
@@ -75,7 +78,8 @@
             {% endif %}
             {% endif %}
             <!-- Post tagline -->
-            {% if page.layout == 'post' %}
+            <!-- {% if page.layout == 'post' %} -->
+            {% if page.layout in ['post','all_posts'] %}
             <h2 class="project-date">
                 <time datetime="{{ page.date | date_to_xmlschema }}" itemprop="datePublished">
                     {% assign date_format = site.cayman-blog.date_format | default: "%b %-d, %Y" %}
