minor change wrt to js mermaid initialization

--- a/layouts/_default/single.html
+++ b/layouts/_default/single.html
@@ -97,7 +97,7 @@
                 topAxis: false,
             },
         };
-        mermaid.initialize(mermaidConfig);
+        mermaid.initialize(mermaidConfig, {startOnLoad: true});
     </script>
     {{ end }}
   
